--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --respawn src/index.ts"
+    "dev": "tsnd --respawn --transpile-only --pretty src/index.ts"
   },
   "dependencies": {
     "express": "^4.17.3",
@@ -12,8 +12,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.25",
     "@types/uuid": "^8.3.4",
-    "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   }
